--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --color-base-gray-100: #f5f5f5;
     --color-base-gray-300: #8d8d99;
     --color-base-gray-900: #202024;
+    font-family: "Mulish", sans-serif;
 }
 
 body{
@@ -41,6 +42,35 @@ main {
     overflow-y: scroll;
 }
 
-/* footer{
-    background-color: rgb(173, 230, 218);
-} */
+header, nav, nav ul {
+    display: flex;
+    align-items: center;
+    gap: 7.2rem;
+    font-weight: 700;
+}
+
+header form{
+    flex: 1;
+}
+
+nav ul{
+    list-style: none;
+    font-size: 1.8rem;
+    color: var(--color-base-gray-300)
+}
+
+ul li.active{
+    color: var(--color-base-gray-900);
+}
+
+.avatar{
+    width: 4.2rem;
+    height: 4.2rem;
+    border-radius: 50%;
+}
+
+footer{
+    text-align: center;
+    padding: 1.6rem;
+    font-weight: 600;
+}
