--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ main h1{
 
 .item img:hover{
     filter: hue-rotate(7deg) contrast(101%) saturate(200%);
+    transform: scale(1.1) rotate(-1deg);
 }
 
 .details {
